logs/Slang/generated/keywords/5.6.2--keyword_notif0.sv.log
name: notif0
description: The 'notif0' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_notif0.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_notif0.sv:8:8: error: expected declarator
    bit notif0;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_notif0.sv:8:9: error: expected member
    bit notif0;
        ^~~~~~
